force-app/main/default/objects/CC_MCC_Plantilla__c/CC_MCC_Plantilla__c.object-meta.xml
<CustomObject>
    <label>MCC Plantilla</label>
    <nameField>
        <displayFormat>MCC-Plantilla-{000000}</displayFormat>
        <label>MCC Plantilla Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCC Plantillas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>