force-app/main/default/objects/CC_MCC_Plantilla__c/fields/CC_MCC__c.field-meta.xml
<CustomField>
    <fullName>CC_MCC__c</fullName>
    <label>MCC</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Plantillas</relationshipLabel>
    <relationshipName>MCC_Plantilla</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>