force-app/main/default/objects/CC_MCC_Plantilla__c/fields/CC_MCC_Plantilla_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>CC_MCC_Plantilla_DeveloperName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla DeveloperName</label>
    <type>TextArea</type>
</CustomField>